added fav recipes vm and model, recipes fragments now use vm and no longer use demoRecipes